fix: text in sidebar on mobile too small

--- a/_scss/components/_sidebar.scss
+++ b/_scss/components/_sidebar.scss
@@ -10,7 +10,7 @@
     box-shadow: -2px 0px 40px rgba(0, 0, 0, 0.4);
     color: rgb(211, 211, 211);
     text-transform: uppercase;
-    font-size: 0.8em;
+    font-size: 1.1em;
     overflow-y: none;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
